implement get profile controller
